--- a/index.html
+++ b/index.html
@@ -1,43 +1,49 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/src/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri App</title>
+    <title>Batería al 100</title>
     <script type="module" src="/src/main.ts" defer></script>
   </head>
-
   <body>
-    <main class="container">
-      <h1>Welcome to Tauri</h1>
+    <div class="container">
+      <div class="card">
+        <div class="header">
+          <img src="/src/assets/logo.png" alt="Batería al 100" class="app-logo">
+          <h1>Preferencias</h1>
+        </div>
+        
+        <div class="setting-group">
+          <div class="label-row">
+            <label for="threshold-slider">Umbral de Alerta</label>
+            <div class="input-wrapper">
+              <input type="number" id="threshold-input" min="10" max="100" value="100" class="highlight-input">
+              <span class="unit">%</span>
+            </div>
+          </div>
+          <input type="range" id="threshold-slider" min="10" max="100" value="100" class="styled-slider">
+          <div class="slider-labels">
+            <span>10%</span>
+            <span>100%</span>
+          </div>
+        </div>
 
-      <div class="row">
-        <a href="https://vite.dev" target="_blank">
-          <img src="/src/assets/vite.svg" class="logo vite" alt="Vite logo" />
-        </a>
-        <a href="https://tauri.app" target="_blank">
-          <img
-            src="/src/assets/tauri.svg"
-            class="logo tauri"
-            alt="Tauri logo"
-          />
-        </a>
-        <a href="https://www.typescriptlang.org/docs" target="_blank">
-          <img
-            src="/src/assets/typescript.svg"
-            class="logo typescript"
-            alt="typescript logo"
-          />
-        </a>
+        <div class="setting-group row-group">
+          <label for="enabled-toggle">Activar Notificaciones</label>
+          <label class="switch">
+            <input type="checkbox" id="enabled-toggle">
+            <span class="slider round"></span>
+          </label>
+        </div>
+
+        <div class="actions">
+          <button id="save-btn" class="primary-btn">Guardar Cambios</button>
+        </div>
+        
+        <p id="status-msg" class="status-text hidden"></p>
       </div>
-      <p>Click on the Tauri logo to learn more about the framework</p>
-
-      <form class="row" id="greet-form">
-        <input id="greet-input" placeholder="Enter a name..." />
-        <button type="submit">Greet</button>
-      </form>
-      <p id="greet-msg"></p>
-    </main>
+    </div>
   </body>
 </html>
